replace everything fixed with grid for overflow scroll to work on small screens

--- a/index.css
+++ b/index.css
@@ -6,13 +6,16 @@ html, body {
 	margin: 0;
 	width: 100%;
 	font-size: 16pt;
-	position: fixed;
+	/*! position: fixed; */
 	height: 100dvh;
+	display: grid;
 }
 
 @media (min-aspect-ratio: 3/4) {
 	html, body {
 		font-size: 12pt;
+		display: grid;
+		grid-template-columns: 1fr;
 	}
 }
 
@@ -23,14 +26,22 @@ html, body {
 #title, #subtitle, body > a, body > p {
 	position: relative;
 	z-index: 1000;
+	grid-column: 1;
+	grid-row: 1;
+}
+
+#debug_stuff {
+  grid-column: 1;
+  grid-row: 1;
+  pointer-events: none;
 }
 
 #garden {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	right: 0;
-    margin: 0;
+	/*! position: fixed; */
+	/*! bottom: 0; */
+	/*! left: 0; */
+	/*! right: 0; */
+    /*! margin: 0; */
     padding: 0;
     background: url(/images/garden.svg) no-repeat center bottom;
     width: 100%;
@@ -41,6 +52,8 @@ html, body {
 	#garden { 
 		height: 75dvh;
 		background-size: 100% 100%;
+		grid-column: 1;
+		grid-row: 1;
 	}
 }
 
@@ -53,12 +66,14 @@ html, body {
 }
 
 #everything_center {
-	display: flex;
+	display: grid;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	position: fixed;
-	bottom: 10dvh;
+	grid-row: 1;
+	grid-column: 1;
+	align-self: end;
+	margin-bottom: 10dvh;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -70,7 +85,11 @@ html, body {
 
 #everything {
 	display: grid;
-	grid-template-columns: 1fr max-content;
+	grid-template-columns: 1fr min-content;
+	grid-column: 1;
+	grid-row: 1;
+	justify-self: end;
+	grid-template-rows: 1fr 4rem 1.5rem;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -83,10 +102,21 @@ html, body {
 }
 
 #carrot_scroll {
-  overflow-y: scroll;
   height: 100%;
-  justify-content: center;
+  justify-content: end;
   display: grid;
+  grid-row-start: 1;
+  grid-column: 2;
+  grid-row-end: 4;
+  align-content: end;
+}
+
+@media (max-aspect-ratio: 3/4) {
+	#carrot_scroll {
+		overflow-y: auto;
+		grid-row: 2;
+  		grid-column: 1;
+	}
 }
 
 #carrot {
@@ -95,6 +125,8 @@ html, body {
 	display: grid;
 	grid-template-columns: 1fr;
 	width: clamp(7rem,13vw,9rem);
+	height: clamp(20rem,28vh,32rem);
+	align-content: end;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -110,6 +142,7 @@ html, body {
 	width: 100%;
 	grid-column-start: 1;
 	grid-row-start: 1;
+	z-index: 1;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -120,10 +153,8 @@ html, body {
 #mouth {
 	width: 100%;
 	transform-origin: bottom right;
-	transform: translate(-7%, 58%);
 	user-select: none;
-	grid-column-start: 1;
-	grid-row-start: 1;
+	transform: translate(-7%, 12%);
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -182,11 +213,14 @@ html, body {
 	/*! width: 100%; */
 	display: grid;
 	grid-template-columns: max-content 1fr;
-	transform: translate(0%, -41%);
+	/*! transform: translate(0%, -41%); */
 	padding-right: 0.5rem;
 	justify-self: end;
 	align-content: end;
-	width: clamp(15rem, 35vw, 25rem);
+	width: clamp(13rem, 55vw, 22rem);
+	grid-row: 1;
+	grid-column: 1;
+	margin-bottom: 3rem;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -275,6 +309,8 @@ html, body {
 	/*! box-sizing: border-box; */
 	/*! max-width: 100%; */
 	/*! min-width: 0; */
+	grid-row: 3;
+	grid-column: 1;
 }
 
 @media (max-aspect-ratio: 3/4) {
@@ -322,3 +358,16 @@ html, body {
 }
 
 
+#mouth_position {
+  grid-column: 2;
+  grid-row: 1;
+  z-index: 2;
+  align-content: end;
+  align-self: end;
+}
+
+@media (max-aspect-ratio: 3/4) {
+	#mouth_position {
+		grid-column: 1;
+	}
+}
